  configuration and functionality.
* Added project accessor to TargetContext.
* Added --quiet command line option to suppress percentage calculation and
  status messages. This will drastically speed up SBuild's initialization time
  for larger multi-projects, as the dependency tree is not walked trough in
  advance.
* Added arguments parameter to AntJava, as args is deprecated.

SBuild 0.1.5 - 2012-10-26

* Fixed NPE bug in AntCopy.

SBuild 0.1.4 - 2012-10-23

* Added parameters to AntZip Ant wrapper: compress, keepCompression, filesOnly,
  fileSet, fileSets
* Added parameters to AntJar Ant wrapper: compress, keepCompression, filesOnly,
  metaInf, fileSet, fileSets, manifestEntries, manifestSectionEntries, service,
  services
* Added parameter to AntCopy Ant wrapper: fileSet
* Added @configuration annotation, to declare required configuration parameters
  in a project
* Eclipse plugin: Fixed an problem with an incomplete project classpath that
  could break loading of projects in some situations.
* Eclipse plugin: Handle errors while reading the build file and retrieving
  dependencies
* Improved ZipSchemeHandler: The targetFile parameter now treats its argument
  as path relative the to project directory.
* Internal changes in classpath handling. The various classpathes SBuild needs
  when reading, compiling and executing projects are now read from a properties
  file in the installation directory, which decouples embedded solutions like
  the Eclipse Plugin and allows them to load different SBuild versions.
* Added get method to Prop object, to easily test, if an property is set.
* Eclipse plugin: Decoupled plugin version from SBuild JARs. Plugin no longer 
  includes core packages and load SBuild JARs from it installation directory.
* Ensure, ZipSchemeHandler does not overwrite files with same name from
  different archives.

SBuild 0.1.3 - 2012-10-18

* Improved classloading for ScalaTest and JUnit addons.